# WebAutomationTemplate

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PROJECT_STRUCTURE_EXPLAINED.md  README.md  config.ini  driver.py  logger.py  main.py  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
constants/: __init__.py  feed_constants.py  item_constants.py  login_constants.py  settings.py
controller/: __init__.py  controller.py  facade.py
pages/: __init__.py  base_page.py  feed_page.py  item_page.py  login_page.py
tests/: conftest.py  test_feed.py  test_item.py  test_login.py
utils/: __init__.py  exceptions.py  logger.py
